# qtfilemanager

./: CMakeLists.txt  QtFileManager.pro  README  qtfilemanager.desktop  resources.qrc
src/: CMakeLists.txt  actions.cpp  addressbar.cpp  addressbar.h  addresspart.cpp  addresspart.cpp.autosave  addresspart.h  addresspart.h.autosave  bookmarkmodel.cpp  bookmarkmodel.h  bookmarks.cpp  config.h  customactions.cpp  customactions.h  filesystemmanager.cpp  filesystemmanager.h  filesystemmodel.cpp  filesystemmodel.h  icondlg.cpp  icons.cpp  icons.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowfilemanager.cpp  mainwindowfilemanager.h  mymodel.cpp  mymodel.h  mymodelitem.cpp  places.cpp  places.h  progressdlg.cpp  properties.cpp  properties.h  propertiesdialog.cpp  propertiesdialog.h  propertiesdlg.cpp  propertiesdlg.h  (+8 more)
src/forms/: addressbar.ui  addresspart.ui  mainwindowfilemanager.ui  propertiesdialog.ui  viewcontent.ui
src/resources/: resources.qrc
src/resources/images/: .directory
src/translations/: qtfilemanager.desktop.in
translations/: qtfm_da.qm  qtfm_de.qm  qtfm_es.qm  qtfm_fr.qm  qtfm_it.qm  qtfm_pl.qm  qtfm_ru.qm  qtfm_sr.qm  qtfm_sv.qm  qtfm_zh.qm  qtfm_zh_TW.qm
